--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ pydantic>=2.5.0
 
 # API and HTTP
 requests>=2.31.0
+fastapi>=0.115.0
+uvicorn[standard]>=0.30.0
 
 # Observability
 structlog>=23.2.0
