FE || BE || Social media setup

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,17 @@
 GOOGLE_API_KEY=
 OPENWEATHER_API_KEY=
 
+# Social Media API Keys (for real data integration)
+# Reddit API - Get from: https://www.reddit.com/prefs/apps (FREE)
+REDDIT_CLIENT_ID=your_reddit_client_id
+REDDIT_CLIENT_SECRET=your_reddit_client_secret
+
+# News API - Get from: https://newsapi.org (FREE tier: 100 requests/day)
+NEWS_API_KEY=your_news_api_key
+
+# Telegram Bot (optional) - Get from: https://t.me/BotFather (FREE)
+TELEGRAM_BOT_TOKEN=your_telegram_bot_token
+
 # Email configuration
 SENDER_EMAIL=your_email@gmail.com
 EMAIL_PASSWORD=your_app_password_here
