--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,18 @@ requests>=2.31.0
 fastapi>=0.115.0
 uvicorn[standard]>=0.30.0
 
+# Database
+sqlalchemy>=2.0.0
+asyncpg>=0.29.0
+psycopg2-binary>=2.9.9
+
+# Authentication
+pyjwt>=2.8.0
+python-jose[cryptography]>=3.3.0
+google-auth>=2.25.0
+google-auth-oauthlib>=1.2.0
+google-auth-httplib2>=0.2.0
+
 # Observability
 structlog>=23.2.0
 
@@ -22,6 +34,12 @@ python-dotenv>=1.0.0
 pytest>=7.4.0
 pytest-asyncio>=0.21.0
 pytest-cov>=4.1.0
+
+# Social Media APIs
+praw>=7.7.0  # Reddit API
+python-telegram-bot>=20.0  # Telegram API
+newsapi-python>=0.2.7  # News API
+feedparser>=6.0.10  # RSS feeds
 
 # Development
 black>=23.12.0
