--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Environment variables
 GOOGLE_API_KEY=
+GOOGLE_MAPS_API_KEY=
 OPENWEATHER_API_KEY=
 
 # Social Media API Keys (for real data integration)
